<resources>

    <!-- Api keys Livescore API Soccer-->
    <string name="api_key">CRboJSdbyUOdxjyI</string>
    <string name="api_secret">QHClTh9OozvlE0RhS3GBWTNuOBHlVf4L</string>

    <string name="app_name">America Cup 2019</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">Matches</string>
    <string name="favorites">Favorites</string>
    <string name="groupListing">Groups</string>

    <string name="action_qr_code">Codigo QR</string>
    <string name="menu_title">titulo menu</string>
    <string name="cancel">Cancelar</string>
    <string name="tab_title_matches">Matches</string>
    <string name="tab_title_groups">Groups</string>
    <string name="tab_title_favorites">Favorites</string>

    <!-- Match states -->
    <string name="NOT_STARTED">No iniciado</string>
    <string name="IN_PLAY">iniciado</string>
    <string name="HALF_TIME_BREAK">Medio tiempo</string>
    <string name="ADDED_TIME">Tiempo de adicion</string>
    <string name="FINISHED">Finalizado</string>
    <string name="INSUFFICIENT_DATA">Datos insuficientes</string>

    <!-- ID Groups -->
    <string name="groupA">962</string>
    <string name="groupB">961</string>
    <string name="groupC">960</string>
    <string name="id_match">idMatch</string>
    <string name="shared_preferences_teams">dataTeams</string>
    <string name="shared_preferences_teams_saved">teamSaved</string>
    <string name="letter_standing_matches">M</string>
    <string name="letter_standing_won">W</string>
    <string name="letter_standing_drawn">D</string>
    <string name="letter_standing_lost">L</string>
    <string name="letter_standing_pts">Pts</string>
    <string name="statistics">Estadisticas</string>
    <string name="ball_possession">Posesion del balon</string>
    <string name="precision">Precision</string>
    <string name="passes">Pases</string>
    <string name="faults">Faltas</string>
    <string name="yellow_cards">Tarjetas amarillas</string>
    <string name="red_cards">Tarjetas rojas</string>
    <string name="title_reader_QR">Lector codigos QR</string>
    <string name="field_id_team">idTeam</string>
    <string name="field_id_group">idGroup</string>
    <string name="field_name_team">nameTeam</string>
    <string name="msg_favorite_added">Añadido a favoritos</string>
    <string name="msg_favorite_deleted">Eliminado de favoritos</string>
    <string name="without_favorities">No tienes equipos seleccionados como favoritos</string>
    <string name="title_player_activity">Player soccer</string>
    <string name="title_fragment_favorities">Favorities</string>
    <string name="title_fragment_groups">Groups</string>
    <string name="title_fragment_matches">Matches</string>

</resources>
