<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:context=".Fragments.GroupFragment">

        <TableRow
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/name_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GRUPO A"/>

        </TableRow>

        <!-- Titles Rows-->
        <TableRow
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/title_teams"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:text="Equipos"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_standing_matches"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_standing_won"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_standing_drawn"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_standing_lost"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_standing_pts"/>

        </TableRow>

        <!-- First Team-->
        <TableRow
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/name_team_a"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:text="team 1"/>

            <TextView
                android:id="@+id/pj_team_a"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pg_team_a"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pe_team_a"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pp_team_a"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pt_team_a"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

        </TableRow>

        <!-- Second Team-->
        <TableRow
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/name_team_b"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:text="team 1"/>

            <TextView
                android:id="@+id/pj_team_b"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pg_team_b"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pe_team_b"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pp_team_b"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pt_team_b"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

        </TableRow>

        <!-- Third Team-->
        <TableRow
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/name_team_c"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:text="team 1"/>

            <TextView
                android:id="@+id/pj_team_c"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pg_team_c"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pe_team_c"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pp_team_c"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pt_team_c"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

        </TableRow>

        <!-- Fourth Team-->
        <TableRow
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/name_team_d"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:text="team 1"/>

            <TextView
                android:id="@+id/pj_team_d"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pg_team_d"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pe_team_d"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pp_team_d"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

            <TextView
                android:id="@+id/pt_team_d"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="0"/>

        </TableRow>

    </TableLayout>
</android.support.v7.widget.CardView>